--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,9 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.MapsActivity" />
+    android:orientation="vertical"
+    tools:context=".Activities.MapsActivity">
+
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp">
+
+        <TextView
+            android:id="@+id/tv_distance_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/distance_between_you" />
+
+        <TextView
+            android:id="@+id/tv_cairo_distance_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="@string/distance_cairo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_distance_label" />
+
+        <TextView
+            android:id="@+id/tv_cairo_distance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_cairo_distance_label"
+            app:layout_constraintStart_toEndOf="@+id/tv_cairo_distance_label"
+            app:layout_constraintTop_toTopOf="@+id/tv_cairo_distance_label" />
+
+        <TextView
+            android:id="@+id/tv_luxor_distance_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/distance_luxor"
+            app:layout_constraintStart_toStartOf="@+id/tv_cairo_distance_label"
+            app:layout_constraintTop_toBottomOf="@+id/tv_cairo_distance_label" />
+
+        <TextView
+            android:id="@+id/tv_luxor_distance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_luxor_distance_label"
+            app:layout_constraintStart_toEndOf="@+id/tv_luxor_distance_label"
+            app:layout_constraintTop_toTopOf="@+id/tv_luxor_distance_label" />
+
+        <TextView
+            android:id="@+id/tv_closer_city"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/tv_closer_city_label"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_luxor_distance_label" />
+
+        <TextView
+            android:id="@+id/tv_closer_city_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="is closer to you!"
+            app:layout_constraintStart_toEndOf="@+id/tv_closer_city"
+            app:layout_constraintTop_toBottomOf="@+id/tv_luxor_distance_label" />
+    </android.support.constraint.ConstraintLayout>
+
+</LinearLayout>
